# nasibashop

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.services.yml  docker-compose.yml  package-lock.json  package.json
.cursor/rules/: ТЗ.mdc
.github/workflows/: ci.yml
docs/: MVP-PRODUCTION.md
docs/api/: README.md  gateway-openapi.yaml
environment/: nasibashop-nested-ports.env
frontends/admin-panel/: README.md  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontends/admin-panel/app/: layout.tsx  page.tsx
frontends/admin-panel/lib/: categories.ts  env.ts  format-uzs.ts
frontends/admin-panel/types/: api.ts  index.ts  order.ts  payment.ts
frontends/storefront/: README.md  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontends/storefront/app/: globals.css  (+3 more)
infrastructure/: README.md
scripts/: dev-frontends.cjs  dev-stack.cjs  generate-dev-jwt-keys.cjs  migrate-in-docker.sh
services/api-gateway/: README.md
services/delivery-service/: README.md  go.mod
services/media-service/: README.md  go.mod
services/notification-service/: README.md  package-lock.json  package.json
services/order-service/: README.md  build.gradle.kts
services/payment-service/: README.md  package-lock.json  package.json
services/product-service/: README.md  go.mod
services/search-service/: Cargo.toml  README.md
services/search-service/src/: config.rs  handlers.rs  indexer.rs  kafka_worker.rs  main.rs  models.rs
services/user-service/: README.md  go.mod
(+281 files in other folders)
